#2818 [Fixed] Card: Block-end spacing too small

--- a/packages/core/src/components/document-card/document-card.scss
+++ b/packages/core/src/components/document-card/document-card.scss
@@ -10,7 +10,7 @@
 }
 
 .dso-document-card-container {
-  padding-block: units.$u2 units.$u1;
+  padding-block: units.$u2;
   padding-inline: units.$u2;
   inline-size: 100%;
 
